change title's name

--- a/30-8-2020.html
+++ b/30-8-2020.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Esmat Najafi</title>
+        <title>School work</title>
 
         <style>
             p{
@@ -14,7 +14,7 @@
             }
             img {
                 float: left; 
-                /* height: 550px;
+                /* height: 500px;
                 width: 200px;    */
             }
             
